--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ port=3000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=123456
-DB_DATABASE=fut5
+DB_PASSWORD=12345
+DB_DATABASE=reservas
